Added more import syntax cases.

--- a/test/less/import-syntax.less
+++ b/test/less/import-syntax.less
@@ -7,3 +7,5 @@
 @import"import/urls.less";
 @import (css) "import/urls.less";
 @import 'import/urls.less';
+@import "import/urls";
+@import (css) "import/urls";
