Added flatten function.

--- a/test/less/deep.less
+++ b/test/less/deep.less
@@ -1,1 +1,3 @@
-@import "import-and-relative-path-test.less";
+@import "import/import-and-relative-paths-test.less";
+
+@import "import/import-test-a.less";
